# LABORATORIO_PSE

./: README.md
04_systemc_tlm/div/AT4/: Makefile
04_systemc_tlm/div/LT/: Makefile
04_systemc_tlm/div/UT/: Makefile
04_systemc_tlm/root_comparison/AT4/: Makefile
04_systemc_tlm/root_comparison/LT/: Makefile
04_systemc_tlm/root_comparison/RTL/: Makefile
04_systemc_tlm/root_comparison/UT/: Makefile
04_systemc_tlm/root_lesson/AT4/: Makefile
04_systemc_tlm/root_lesson/LT/: Makefile
04_systemc_tlm/root_lesson/UT/: Makefile
AMS_progetto/05_systemc_ams/BASK/: Makefile  tr.vcd
AMS_progetto/05_systemc_ams/UserGuideBasedExercises/: .cproject  .project  main.x
AMS_progetto/06_transactors_and_assertions/AMS_transactor/: Makefile  execution.gnu
AMS_progetto/06_transactors_and_assertions/root_assertions/: Makefile
AMS_progetto/06_transactors_and_assertions/root_transactor/: Makefile
AMS_progetto/PROGETTO/include/: command_enum.hh  valve_AMS_TDF.hh  waterTank_AMS_LSF.hh
AMS_progetto/PROGETTO_AMS INIZIALE/: Makefile
AMS_progetto/PROGETTO_AMS__testbench_TLM_xtea/: Makefile  script.sh
FSM_DATAPATH_XTEA/VR436823_Leonardo_Testolin_01_RTL/: .gitignore  CMakeLists.txt  Makefile  mail da inviare.txt  wave.vcd
FSM_DATAPATH_XTEA/VR436823_Leonardo_Testolin_01_RTL/include/: XTEA_RTL.hh  XTEA_RTL_testbench.hh
FSM_DATAPATH_XTEA/VR436823_Leonardo_Testolin_01_RTL/src/: XTEA_RTL.cc  XTEA_RTL_testbench.cc  main_XTEA_RTL.cc
FSM_DATAPATH_XTEA/VR436823_Leonardo_testolin_TLM(UT,LT,AT4)/: Makefile  README.md
TLM/UT_progetto/: Makefile
(+238 files in other folders)
